--- a/Frontend/Landing_page/src/app/app.component.html
+++ b/Frontend/Landing_page/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-header></app-header> -->
 <router-outlet></router-outlet>
 <app-chatbot></app-chatbot>
-
+<!-- <app-car-selection></app-car-selection> -->
 <!-- Scroll to Top Button -->
 <button id="scrollToTopBtn" class="scroll-to-top-btn" (click)="scrollToTop()">
   <i class="bi bi-arrow-up-circle-fill"></i> <!-- Bootstrap icon for upward arrow -->
