--- a/Frontend/Landing_page/src/app/booking/booking.component.html
+++ b/Frontend/Landing_page/src/app/booking/booking.component.html
@@ -21,7 +21,7 @@
         Browse through our diverse selection of cars, from compact city vehicles
         to spacious SUVs. Discover our latest features and models.
       </p>
-      <a href="/car-selection-page">
+      <a routerLink="/cardetails">
         <button class="btn btn-dark py-2 px-4">Explore Cars</button>
       </a>
     </div>
@@ -37,7 +37,7 @@
         needs. Whether it's a stylish sedan or a versatile SUV, we have the
         perfect model waiting for you.
       </p>
-      <a href="/car-selection-page">
+      <a routerLink="/cardetails">
         <button class="btn btn-dark py-2 px-4">Find Your Dream</button>
       </a>
     </div>
@@ -52,7 +52,7 @@
         Experience the thrill of driving. Book a test drive today and find the
         car that fits your lifestyle.
       </p>
-      <a href="/car-selection-page">
+      <a routerLink='/cardetails'>
         <button class="btn btn-dark py-2 px-4">Book Test Drive</button>
       </a>
     </div>
