--- a/Frontend/Landing_page/src/app/footer/footer.component.html
+++ b/Frontend/Landing_page/src/app/footer/footer.component.html
@@ -11,35 +11,35 @@
       <div class="footer-col">
         <h5>Quick Links</h5>
         <ul class="footer-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#booking">Booking</a></li>
-          <li><a href="#service-list">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a routerLink="#">Home</a></li>
+          <li><a routerLink="#booking">Booking</a></li>
+          <li><a routerLink="#service-list">Services</a></li>
+          <li><a routerLink="#contact">Contact</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h5>Services</h5>
         <ul class="footer-links">
-          <li><a href="#booking">Schedule a Test Drive</a></li>
-          <li><a href="#service-list">24x7 Assistance</a></li>
-          <li><a href="#service-list">Value Care</a></li>
+          <li><a routerLink="#booking">Schedule a Test Drive</a></li>
+          <li><a routerLink="#service-list">24x7 Assistance</a></li>
+          <li><a routerLink="#service-list">Value Care</a></li>
         </ul>
       </div>
 <div class="footer-col">
         <h5>Useful Links</h5>
         <ul class="footer-links">
-          <li><a href="https://rntbci.in/">RNTBCI</a></li>
-          <li><a href="https://www.renault.co.in/">Renault India</a></li>
-          <li><a href="https://www.nissan.in/">Nissan India</a></li>
-          <li><a href="https://mitsubishielectric.in/">Mitsubishi Motors</a></li>
+          <li><a routerLink="https://rntbci.in/">RNTBCI</a></li>
+          <li><a routerLink="https://www.renault.co.in/">Renault India</a></li>
+          <li><a routerLink="https://www.nissan.in/">Nissan India</a></li>
+          <li><a routerLink="https://mitsubishielectric.in/">Mitsubishi Motors</a></li>
         </ul>
       </div>
 
       <div class="footer-col">
         <div class="social-icons">
-          <h4>Follow us</h4><a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+          <h4>Follow us</h4><a routerLink="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+          <a routerLink="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+          <a routerLink="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
 
@@ -50,8 +50,8 @@
           <div class="col-12 text-center">
             <p>&copy; {{ currentYear }} Company Name. All Rights Reserved.</p>
             <div>
-              <a href="/privacy-policy" class="footer-link">Privacy Policy</a> |
-              <a href="/terms-of-service" class="footer-link">Terms of Service</a>
+              <a routerLink="/privacy-policy" class="footer-link">Privacy Policy</a> |
+              <a routerLink="/terms-of-service" class="footer-link">Terms of Service</a>
             </div>
           </div>
         </div>
