--- a/Frontend/Landing_page/src/app/login/login.component.html
+++ b/Frontend/Landing_page/src/app/login/login.component.html
@@ -36,7 +36,7 @@
             </div>
           </form>
           <div class="text-center mt-3 m-2">
-            <p>Don't have an account? <a href="/signup" style="color: #8347ad;">Register</a></p>
+            <p>Don't have an account? <a routerLink="/signup" style="color: #8347ad;">Register</a></p>
           </div>
         </div>
       </div>
