--- a/Frontend/Landing_page/src/app/home/home.component.html
+++ b/Frontend/Landing_page/src/app/home/home.component.html
@@ -15,5 +15,5 @@
 <app-news></app-news>
 <app-feedback></app-feedback>
 <app-logo></app-logo>
-
+<!-- <app-chat></app-chat> -->
 <!-- <app-footer></app-footer> -->
