--- a/Frontend/Landing_page/src/app/chatbot/chatbot.component.html
+++ b/Frontend/Landing_page/src/app/chatbot/chatbot.component.html
@@ -1,9 +1,5 @@
-Log in
-
-Sign up
-You said:
+<!-- Chatbot Icon to toggle chat window -->
 <div class="chatbot-icon" (click)="toggleChat()">
-  <!-- Replace the chatbot icon image with the new button -->
   <button type="button" aria-label="Open" class="css-15q8v64 e13411jb0">
     <svg width="1em" height="1em" viewBox="0 0 40 40" fill="none">
       <path d="M14 2C6.268 2 0 6.924 0 13a10.106 10.106 0 0 0 4.6 8.132A14.374 14.374 0 0 1 0 26.286a18.948 18.948 0 0 0 9.714-2.816c1.401.353 2.84.531 4.286.53 7.732 0 14-4.924 14-11S21.732 2 14 2zm-8 8h10v2H6v-2zm16 6H6v-2h16v2z" fill="currentColor"></path>
@@ -12,7 +8,7 @@ You said:
   </button>
 </div>
 
-<!-- Chat Container (appears when chat is open) -->
+<!-- Chat Container -->
 <div class="chat-container" [ngClass]="{ 'open': isChatOpen }">
   <div class="chat-header">
     <button class="close-btn" (click)="toggleChat()">✖</button>
@@ -20,16 +16,25 @@ You said:
   </div>
 
   <div class="chat-window">
-    <!-- Displaying messages -->
+    <!-- Messages Section -->
     <div *ngFor="let message of messages" class="message" [ngClass]="{ 'from-user': message.sender === 'user', 'from-bot': message.sender === 'bot' }">
       <div class="message-text">{{ message.text }}</div>
     </div>
 
-    <!-- Show options as buttons for the user to select -->
+    <!-- Loading Indicator -->
+    <div *ngIf="isLoading" class="loading">Loading...</div>
+
+    <!-- Predefined Options as Buttons -->
     <div *ngIf="isChatOpen" class="button-container">
       <button *ngFor="let option of options" (click)="onOptionSelected(option)" id="btn-style">
         {{ option }}
       </button>
     </div>
+
+    <!-- User Input Form -->
+    <form [formGroup]="form" (ngSubmit)="sendMessage()" class="user-input-form">
+      <input formControlName="message" placeholder="Type your message..." />
+      <button type="submit">Send</button>
+    </form>
   </div>
 </div>
