--- a/Frontend/Landing_page/src/app/header/header.component.html
+++ b/Frontend/Landing_page/src/app/header/header.component.html
@@ -42,7 +42,6 @@
           {{name}}
           <!-- <h1>{{name}}</h1> -->
         </span>
-
         <!-- Profile Box (Logout) -->
         <div *ngIf="isProfileBoxVisible" class="profile-box">
           <div class="profile-arrow"></div>  <!--Arrow pointing to profile -->
@@ -52,6 +51,7 @@
           </div>
       </div>
     }
+  
   </div>
   </div>
 
@@ -82,7 +82,7 @@
   
         <!-- Name Input -->
         <div class="form-group mb-3">
-          <input type="text" class="form-control form-control-lg" formControlName="name" placeholder="Enter your name" required>
+          <input type="text" class="form-control form-control-lg" formControlName="name" placeholder="Enter your name" required readonly>
           <div *ngIf="edit.get('name')?.touched && edit.get('name')?.invalid" class="text-danger">
             <div *ngIf="edit.get('name')?.hasError('required')">Name is required</div>
           </div>
@@ -90,7 +90,7 @@
   
         <!-- Email Input -->
         <div class="form-group mb-3">
-          <input type="email" class="form-control form-control-lg" formControlName="email" placeholder="Enter your email" required>
+          <input type="email" class="form-control form-control-lg" formControlName="email" placeholder="Enter your email" required readonly>
           <div *ngIf="edit.get('email')?.touched && edit.get('email')?.invalid" class="text-danger">
             <div *ngIf="edit.get('email')?.hasError('required')">Email is required</div>
             <div *ngIf="edit.get('email')?.hasError('email')">Please enter a valid email address</div>
@@ -115,12 +115,13 @@
           </div>
         </div>
   <div class="row">
+    
     <div class="col">
-      <button type="submit" class="btn btn-primary btn-lg w-100 mb-3">Submit</button>
+      <button type="button" class="btn btn-secondary btn-lg w-100" (click)="closePop()">Close</button>
 
     </div>
     <div class="col">
-      <button type="button" class="btn btn-secondary btn-lg w-100" (click)="closePop()">Close</button>
+      <button type="submit" class="btn btn-primary btn-lg w-100 mb-3">Submit</button>
 
     </div>
   </div>
