--- a/Frontend/Landing_page/src/app/login/login.component.css
+++ b/Frontend/Landing_page/src/app/login/login.component.css
@@ -134,3 +134,51 @@ button:hover {
   }
 }
 
+.popup-overlay{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  backdrop-filter: blur(4px);
+  z-index: 100;
+ 
+}
+.popup-content{
+padding: 10px;
+background-color: #f4f9fd;
+width: 500px;
+height: 400px;
+text-align: center;
+border: 2px solid #89abc7;
+border-radius: 25px;
+position: relative;
+}
+input:focus {
+  outline: none;
+  border-color: #8347ad;
+  box-shadow: 0 4px 8px rgba(131, 71, 173, 0.4);
+  background-color: white;
+}
+.close-btn {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  background: none;
+  border: none;
+  color: #8347ad;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+.popup-content .text-danger {
+  text-align: left; /* Align error to the left in forgot password form */
+  font-size: 0.875rem;
+  margin-top: 5px;
+  color: #e74c3c;
+  margin-left: 65px;
+}
