--- a/Frontend/Landing_page/src/app/navbar/navbar.component.html
+++ b/Frontend/Landing_page/src/app/navbar/navbar.component.html
@@ -127,8 +127,15 @@
           </a>
         </li>
 
-        <span class="divider"><hr /></span>
-
+        <li class="nav-item">
+          <a
+          href="#"          >
+            <span class="icon">
+              <i class="bi bi-box-arrow-left"></i>
+            </span>
+            <span class="text" (click)="logout()">Logout</span>
+          </a>
+        </li>
       </ul>
     </nav>
    
