--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -408,8 +408,8 @@
 </div>
 
 <!-- Sidebar for test slot -->
-@if (isBookingClicked){
-<div class="test-drive-dialog show">
+<!-- @if(isBookingClicked){ -->
+<div *ngIf="isBookingClicked" class="test-drive-dialog show">
   <div class="dialog-content">
     <!-- Left Side: Car Info -->
     <div class="car-info">
@@ -696,4 +696,3 @@
 </div>
 
 <br /><br />
-}
