--- a/Frontend/Landing_page/src/app/login/login.component.css
+++ b/Frontend/Landing_page/src/app/login/login.component.css
@@ -9,11 +9,9 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); 
   transition: transform 0.3s ease-in-out; 
 }
-
 .main:hover {
   transform: scale(1.02); 
 }
-
 .card {
   margin-top: 60px;
   border: 1px solid black;
@@ -116,7 +114,7 @@ button:hover {
     margin-top: 30px;
   }
 }
-.popup-overlay{
+.popup-overlay {
   display: flex;
   width: 100%;
   height: 100%;
@@ -127,41 +125,45 @@ button:hover {
   position: fixed;
   backdrop-filter: blur(4px);
   z-index: 100;
- 
 }
-.popup-content{
-padding: 10px;
-background-color: #f4f9fd;
-width: 500px;
-height: 400px;
-text-align: center;
-border: 2px solid #89abc7;
-border-radius: 25px;
-position: relative;
+
+.popup-content {
+  padding: 10px;
+  background-color: #f4f9fd;
+  width: 500px;
+  height: 350px;
+  text-align: center;
+  border: 2px solid #89abc7;
+  border-radius: 25px;
+  position: relative;
 }
+
 input:focus {
   outline: none; 
   border-color: #8347ad;
   box-shadow: 0 4px 8px rgba(131, 71, 173, 0.4); 
   background-color: white; 
 }
-.close-btn {
+
+.close {
   position: absolute;
   top: 10px;
-  left: 10px;
-  font-size: 24px;
-  font-weight: bold;
-  background: none;
-  border: none;
-  color: #8347ad;
+  right: 10px;
   cursor: pointer;
-  transition: color 0.3s ease;
+  font-size: 20px;
+  color: black;
 }
+
 .popup-content .text-danger {
-  text-align: left; /* Align error to the left in forgot password form */
+  text-align: left; 
   font-size: 0.875rem;
   margin-top: 5px;
   color: #e74c3c;
   margin-left: 65px;
 }
-
+.data input {
+    margin-left: 55px
+}
+.text input{
+  margin-left: 65px
+}
