--- a/Frontend/Landing_page/src/app/signup/signup.component.html
+++ b/Frontend/Landing_page/src/app/signup/signup.component.html
@@ -24,8 +24,9 @@
                 <div *ngIf="signupForm.controls['email'].touched && signupForm.controls['email'].invalid"
                   class="text-danger">
                   <div *ngIf="signupForm.controls['email'].errors?.['required']">Email is required</div>
+                  <div *ngIf="signupForm.controls['email'].errors?.['alreadyRegistered']">This email is already registered</div>
                 </div>
-                <span class="text-danger">{{errorMsg}}</span>
+                <!-- <span class="text-danger">{{errorMsg}}</span> -->
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
@@ -34,7 +35,7 @@
                 <div *ngIf="signupForm.controls['password'].touched && signupForm.controls['password'].invalid"
                   class="text-danger">
                   <div *ngIf="signupForm.controls['password'].errors?.['required']">Password is required</div>
-                  <div *ngIf="signupForm.controls['password'].errors?.['maxlength']">Should be less than 8 characters</div>
+                  <div *ngIf="signupForm.controls['password'].errors?.['maxlength']">Should be more than 8 characters</div>
                 </div>
               </div>
               <div class="form-group">
@@ -50,6 +51,8 @@
                   class="text-danger">
                   <div *ngIf="signupForm.controls['mobile'].errors?.['required']">Mobile number is required</div>
                   <div *ngIf="signupForm.controls['mobile'].errors?.['maxlength']">Should be 10 digits</div>
+                  <div *ngIf="signupForm.controls['mobile'].errors?.['alreadyRegistered']">This mobile number is already registered</div>
+
                 </div>
               </div>
               <div class="form-group">
