--- a/Frontend/Landing_page/src/app/chatbot/chatbot.component.html
+++ b/Frontend/Landing_page/src/app/chatbot/chatbot.component.html
@@ -1,10 +1,7 @@
 <!-- Chatbot Icon to toggle chat window -->
 <div class="chatbot-icon" (click)="toggleChat()">
   <button type="button" aria-label="Open" class="css-15q8v64 e13411jb0">
-    <svg width="1em" height="1em" viewBox="0 0 40 40" fill="none">
-      <path d="M14 2C6.268 2 0 6.924 0 13a10.106 10.106 0 0 0 4.6 8.132A14.374 14.374 0 0 1 0 26.286a18.948 18.948 0 0 0 9.714-2.816c1.401.353 2.84.531 4.286.53 7.732 0 14-4.924 14-11S21.732 2 14 2zm-8 8h10v2H6v-2zm16 6H6v-2h16v2z" fill="currentColor"></path>
-      <path d="M35.4 33.132A10.107 10.107 0 0 0 40 25c0-5.012-4.27-9.232-10.104-10.56C29.01 20.931 22.222 26 14 26a19.412 19.412 0 0 1-1.942-.107C12.638 31.55 18.652 36 26 36a17.476 17.476 0 0 0 4.286-.53A18.949 18.949 0 0 0 40 38.285a14.375 14.375 0 0 1-4.6-5.153z" fill="currentColor"></path>
-    </svg>
+    <img src="chatbot.svg" alt="Chatbot Icon" width="40" height="40">
   </button>
 </div>
 
@@ -17,7 +14,11 @@
 
   <div class="chat-window">
     <!-- Messages Section -->
-    <div *ngFor="let message of messages" class="message" [ngClass]="{ 'from-user': message.sender === 'user', 'from-bot': message.sender === 'bot' }">
+    <div *ngFor="let message of messages" class="message" [ngClass]="{
+      'from-bot': message.sender === 'bot',
+      'from-option': message.sender === 'option',
+      'from-special-bot': message.isSpecial === true
+    }">
       <div class="message-text">{{ message.text }}</div>
     </div>
 
@@ -25,16 +26,21 @@
     <div *ngIf="isLoading" class="loading">Loading...</div>
 
     <!-- Predefined Options as Buttons -->
-    <div *ngIf="isChatOpen" class="button-container">
+    <div *ngIf="isChatOpen && !isLoading && options.length > 0" class="button-container">
       <button *ngFor="let option of options" (click)="onOptionSelected(option)" id="btn-style">
         {{ option }}
       </button>
     </div>
 
     <!-- User Input Form -->
-    <form [formGroup]="form" (ngSubmit)="sendMessage()" class="user-input-form">
+    <form [formGroup]="form" (ngSubmit)="sendMessage()" class="user-input-form" *ngIf="isChatOpen && !isLoading && !isOnPage">
       <input formControlName="message" placeholder="Type your message..." />
       <button type="submit">Send</button>
     </form>
+
+    <!-- Go Back Button (when user navigates to another page) -->
+    <button *ngIf="isOnPage" (click)="goBack()" class="go-back-btn">
+      Go Back
+    </button>
   </div>
 </div>
