--- a/Frontend/Landing_page/src/app/Landing Page/header/header.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/header/header.component.html
@@ -42,6 +42,7 @@
           {{name}}
           <!-- <h1>{{name}}</h1> -->
         </span>
+
         <!-- Profile Box (Logout) -->
         <div *ngIf="isProfileBoxVisible" class="profile-box">
           <div class="profile-arrow"></div>  <!--Arrow pointing to profile -->
@@ -51,7 +52,6 @@
           </div>
       </div>
     }
-  
   </div>
   </div>
 
@@ -80,7 +80,7 @@
   
          Name Input
         <div class="form-group mb-3">
-          <input type="text" class="form-control form-control-lg" formControlName="name" placeholder="Enter your name" required readonly>
+          <input type="text" class="form-control form-control-lg" formControlName="name" placeholder="Enter your name" required>
           <div *ngIf="edit.get('name')?.touched && edit.get('name')?.invalid" class="text-danger">
             <div *ngIf="edit.get('name')?.hasError('required')">Name is required</div>
           </div>
@@ -88,7 +88,7 @@
   
         Email Input --
         <div class="form-group mb-3">
-          <input type="email" class="form-control form-control-lg" formControlName="email" placeholder="Enter your email" required readonly>
+          <input type="email" class="form-control form-control-lg" formControlName="email" placeholder="Enter your email" required>
           <div *ngIf="edit.get('email')?.touched && edit.get('email')?.invalid" class="text-danger">
             <div *ngIf="edit.get('email')?.hasError('required')">Email is required</div>
             <div *ngIf="edit.get('email')?.hasError('email')">Please enter a valid email address</div>
@@ -113,13 +113,12 @@
           </div>
         </div>
   <div class="row">
-    
     <div class="col">
-      <button type="button" class="btn btn-secondary btn-lg w-100" (click)="closePop()">Close</button>
+      <button type="submit" class="btn btn-primary btn-lg w-100 mb-3">Submit</button>
 
     </div>
     <div class="col">
-      <button type="submit" class="btn btn-primary btn-lg w-100 mb-3">Submit</button>
+      <button type="button" class="btn btn-secondary btn-lg w-100" (click)="closePop()">Close</button>
 
     </div>
   </div>
@@ -137,10 +136,10 @@
   
         <!-- Name Input -->
         <div class="row mb-3">
-          <div class="col-3">
+          <!-- <div class="col-3">
             <label for="name" class="form-label">Name</label>
-          </div>
-          <div class="col-9">
+          </div> -->
+          <div class="col-12">
             <input type="text" id="name" class="form-control form-control-lg" formControlName="name" placeholder="Enter your name" required>
             <div *ngIf="edit.get('name')?.touched && edit.get('name')?.invalid" class="text-danger">
               <div *ngIf="edit.get('name')?.hasError('required')">Name is required</div>
@@ -150,10 +149,10 @@
   
         <!-- Email Input -->
         <div class="row mb-3">
-          <div class="col-3">
+          <!-- <div class="col-3">
             <label for="email" class="form-label">Email</label>
-          </div>
-          <div class="col-9">
+          </div> -->
+          <div class="col-12">
             <input type="email" id="email" class="form-control form-control-lg" formControlName="email" placeholder="Enter your email" required>
             <div *ngIf="edit.get('email')?.touched && edit.get('email')?.invalid" class="text-danger">
               <div *ngIf="edit.get('email')?.hasError('required')">Email is required</div>
@@ -164,10 +163,10 @@
   
         <!-- Mobile Input -->
         <div class="row mb-3">
-          <div class="col-3">
+          <!-- <div class="col-3">
             <label for="mobile" class="form-label">Mobile Number</label>
-          </div>
-          <div class="col-9">
+          </div> -->
+          <div class="col-12">
             <input type="tel" id="mobile" class="form-control form-control-lg" formControlName="mobile" placeholder="Enter your mobile number" required>
             <div *ngIf="edit.get('mobile')?.touched && edit.get('mobile')?.invalid" class="text-danger">
               <div *ngIf="edit.get('mobile')?.hasError('required')">Mobile number is required</div>
@@ -178,10 +177,10 @@
   
         <!-- Address Input -->
         <div class="row mb-3">
-          <div class="col-3">
+          <!-- <div class="col-3">
             <label for="address" class="form-label">Address</label>
-          </div>
-          <div class="col-9">
+          </div> -->
+          <div class="col-12">
             <input type="text" id="address" class="form-control form-control-lg" formControlName="address" placeholder="Enter your address" required>
             <div *ngIf="edit.get('address')?.touched && edit.get('address')?.invalid" class="text-danger">
               <div *ngIf="edit.get('address')?.hasError('required')">Address is required</div>
@@ -192,11 +191,12 @@
   
         <!-- Submit and Close Buttons -->
         <div class="row">
-          <div class="col">
-            <button type="submit" class="btn btn-primary btn-lg w-100 mb-3">Submit</button>
-          </div>
+         
           <div class="col">
             <button type="button" class="btn btn-secondary btn-lg w-100" (click)="closePop()">Close</button>
+          </div>
+          <div class="col">
+            <button type="submit" class="btn btn-primary btn-lg w-100 mb-3">Submit</button>
           </div>
         </div>
       </form>
