--- a/Frontend/Landing_page/src/app/Landing Page/header/header.component.html
+++ b/Frontend/Landing_page/src/app/Landing Page/header/header.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="user-options">
         <span class="privacy-policy">Privacy Policy</span>
-        <a routerLink="/location" class="user-location">
+        <a routerLink="/homelocation" class="user-location">
           <i class="fas fa-map-marker-alt"></i> Location
         </a>
 
