--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="page-container" [class.shifted]="isFilterSidebarOpen">
   <header class="header-section">
     <h1 class="header-title">Online Test Drive Booking</h1>
@@ -19,7 +20,7 @@
                 </div> -->
         <div class="question-wrapper">
           <h2 class="question-text one" style="font-size: xx-large">
-            Welcome to myRNM – Your Personalized Car Shopping Experience!
+            Welcome to MyRNM – Your Personalized Car Shopping Experience!
           </h2>
         </div>
 
@@ -716,5 +717,5 @@
 
   </div>
 </div>
-
-<br /><br />
+</div>
+<app-footer></app-footer>
