--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -305,7 +305,7 @@
 <br><br>
 
 <div class="question-wrapper">
-  <h2 class="question-text two size">
+  <h2 class="question-text two size1">
     <a id="q2" href="#brand-section" role="button">Click a brand to select your car....</a>
   </h2>
 </div>
