--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -74,18 +74,8 @@
     </button>
     <h2 style="color: black">Choose Your CAR!</h2>
     <div class="filters">
-
       
-
-      <label for="carType">Car Type:</label>
-<select id="carType" (change)="filterByCarType($event)" class="baloo">
-  <option value="">All</option>
-  <option value="SUV">SUV</option>
-  <option value="Hatchback">Hatchback</option>
-  <option value="Sedan">Sedan</option>
-  <option value="Truck">Truck</option>
-</select>
-
+      <label>
         Price Range:
         <select (click)="filterCarsByPrice($event)" class="baloo">
           <option value="">All</option>
@@ -94,8 +84,7 @@
           <option value="high">Above ₹20 Lakhs</option>
         </select>
       </label> -->
-
-      <label class="baloo">
+      <!-- <label class="baloo">
         Price Range: ₹{{ minPrice }} - ₹{{ maxPrice }}
         <input 
           type="range" 
@@ -105,9 +94,7 @@
           (input)="filterCarsByPrice($event)"
           step="10000"
         />
-
       </label> -->
-
       
       
       <!-- <label>
@@ -128,7 +115,6 @@
         <option value="Sedan">Sedan</option>
         <option value="Truck">Truck</option>
       </select>
-
 
       <label>
         Rating:
@@ -575,68 +561,37 @@
         </ul>
       </div>
 
-
       <!-- Step 1 Content -->
       <div class="formbold-form-step-1" [ngClass]="{ active: currentStep === 1 }">
         <div>
           <label for="name" class="formbold-form-label">User name</label>
-          <input type="text" name="name" id="firstname" placeholder="Enter your name" class="formbold-form-input"
+          <input type="text" name="name" id="firstname" readonly placeholder="Enter your name" class="formbold-form-input"
             [(ngModel)]="formData.name" #name="ngModel" required />
           <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
             <!-- <small *ngIf="name.errors?.['required']">Name is required.</small> -->
-
-        <!-- Step 1 Content -->
-        <div class="formbold-form-step-1" [ngClass]="{ active: currentStep === 1 }">
-          <div>
-            <label for="name" class="formbold-form-label">User name</label>
-            <input type="text" name="name" id="firstname" placeholder="Enter your name" class="formbold-form-input"
-              [(ngModel)]="formData.name" #name="ngModel" required readonly />
-            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
-              <!-- <small *ngIf="name.errors?.['required']">Name is required.</small> -->
-            </div>
-
           </div>
         </div>
 
-
-          <div class="formbold-input-flex">
-            <div>
-              <label for="phone" class="formbold-form-label">Phone Number</label>
-              <input type="text" name="phone" id="phone" class="formbold-form-input"
-                placeholder="Enter your phone number" [(ngModel)]="formData.phone" #phone="ngModel" required
-                pattern="^\d{10}$" maxlength="10" minlength="10"
-                [ngClass]="{'is-invalid': phone.invalid && (phone.dirty || phone.touched)}"  />
-              <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="error">
-                <!-- <small *ngIf="phone.errors?.['required']">Phone number is required.</small>
+        <div class="formbold-input-flex">
+          <div>
+            <label for="phone" class="formbold-form-label">Phone Number</label>
+            <input type="text" name="phone" id="phone" class="formbold-form-input" placeholder="Enter your phone number"
+              [(ngModel)]="formData.phone" #phone="ngModel" readonly required pattern="^\d{10}$" maxlength="10" minlength="10"
+              [ngClass]="{'is-invalid': phone.invalid && (phone.dirty || phone.touched)}" />
+            <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="error">
+              <!-- <small *ngIf="phone.errors?.['required']">Phone number is required.</small>
                 <small *ngIf="phone.errors?.['pattern']">Phone number must be exactly 10 digits.</small> -->
-              </div>
-            </div>
-
-            <div>
-              <label for="email" class="formbold-form-label">Email Address</label>
-              <input type="email" name="email" id="email" placeholder="Enter your email" class="formbold-form-input"
-                [(ngModel)]="formData.email" #email="ngModel" required readonly />
-              <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
-                <!-- <small *ngIf="email.errors?.['required']">Email is required.</small> -->
-                <small *ngIf="email.errors?.['email']">Invalid email format.</small>
-              </div>
             </div>
           </div>
 
           <div>
-
             <label for="email" class="formbold-form-label">Email Address</label>
             <input type="email" name="email" id="email" placeholder="Enter your email" class="formbold-form-input"
-              [(ngModel)]="formData.email" #email="ngModel" required />
+              [(ngModel)]="formData.email" #email="ngModel" required readonly/>
             <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
               <!-- <small *ngIf="email.errors?.['required']">Email is required.</small> -->
               <small *ngIf="email.errors?.['email']">Invalid email format.</small>
             </div>
-
-            <label for="address" class="formbold-form-label">Address</label>
-            <input type="text" name="address" id="address" placeholder="Enter your address" class="formbold-form-input"
-              [(ngModel)]="formData.address" re />
-
           </div>
         </div>
 
@@ -658,17 +613,17 @@
           </div>
 
 
+          <!-- Showroom Dropdown -->
           <label for="showroom" class="formbold-form-label">Preferred Showroom Location</label>
           <select id="showroom" class="formbold-form-input" [(ngModel)]="selectedCenterId"
-            (change)="updateAvailableTimeSlots(selectedCenterId)" name="showroomLocation" required>
+            (change)="updateAvailableTimeSlots(selectedCenterId)" name="showroomLocation" #showroomLocation="ngModel"
+            required>
             <option [value]="" disabled>Select a Location</option>
             <option *ngFor="let center of filteredLocations" [value]="center.id">
               {{ center.name }} - {{ center.location }} (Available  Test Drive Slots: {{ center.availableSlots }})
             </option>
           </select>
-
           <div *ngIf="showroomLocation.invalid && (showroomLocation.dirty || showroomLocation.touched)" class="error">
-
             <small *ngIf="showroomLocation.errors?.['required']">Showroom location is required.</small>
           </div>
 
@@ -727,7 +682,5 @@
 </div>
 
 <br /><br />
-
 </div>
-
 <app-footer></app-footer>
