--- a/Frontend/Landing_page/src/app/Admin/query/query.component.html
+++ b/Frontend/Landing_page/src/app/Admin/query/query.component.html
@@ -35,7 +35,8 @@
 
   <!-- Load More Button -->
   <div class="text-center mt-4">
-    <button *ngIf="displayedQuery.length < contactList.length" 
+    
+    <button *ngIf="displayedQuery.length<contactList.length" 
             class="btn btn-primary" 
             (click)="loadMore()" style="width: 30%;">
       Load More
@@ -50,7 +51,7 @@
       
       <div class="form-group">
         <label for="email">Recipient Email:</label>
-        <input type="email" id="email" [(ngModel)]="email" name="email" class="form-control" required   [(ngModel)]="selectedmail"/>
+        <input type="email" id="email" [(ngModel)]="email" name="email" class="form-control" required  readonly  [(ngModel)]="selectedmail"/>
       </div>
 
       <div class="form-group">
